Change list items

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ title: home
 </h2>
 <p>For most communication, the best way to reach me is via email at cwzou [at] berkeley.edu.</p>
 <ul>
-  <li class="spaced-list">Otherwise, <a href="https://github.com/chriswzou">GitHub</a> holds my software projects.</li>
-  <li class="spaced-list">I'm occasionally on <a href="https://www.linkedin.com/in/chriswzou/">LinkedIn.</a></li>
+  <li class="spaced-list">Otherwise, my software projects are on <a href="https://github.com/chriswzou">GitHub</a>.</li>
+  <li class="spaced-list">We can always connect on <a href="https://www.linkedin.com/in/chriswzou/">LinkedIn.</a></li>
   <li class="spaced-list">Neurotech@Berkeley's <a href="https://medium.com/@ucbneurotech">Medium</a> features some
     of my past work. It's also well worth a shoutout.</li>
 </ul>
