Add healthcare post

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ title: home
   <a href="https://cs61bl.org/su20/">CS61BL: Data Structures</a>.
 </p>
 <p>
-  My larger aim is to improve healthcare with technology. The ongoing COVID-19 pandemic has made it abundantly clear
+  My larger aim is to improve healthcare through technology. The ongoing COVID-19 pandemic has made it abundantly clear
   that the healthcare sector is underfunded and underprepared, whether financially, logistically, or medically.
   The pandemic has also made clear that new technology can drastically improve resource allocation and patient outcomes.
-  More generally, the ethos of the technology sector rewards reasonable risk and encourages disruption, things
+  More generally, the tech mindset rewards reasonable risk and encourages disruption, things
   twice needed in an overburdened, conservative market.
 </p>
 <p>
