Add underlining and substructure search blog post

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: home
 ---
 
-<img src="https://chriswzou.github.io/assets/img_2604.jpg"
+<img src="assets/propic.jpg"
      alt="Decent Picture of Myself"
      style="width: 30%;" />
 <h1 style="margin-top: 1em; margin-bottom: 1em;">
@@ -12,12 +12,12 @@ title: home
   </span>
 </h1>
 <p>
-  ...a junior at <a href="https://berkeley.edu">UC Berkeley</a> studying Computer Science and Molecular Biology. This summer, I'm building
-  a MongoDB integration for <a href="https://github.com/rdkit">rdkit</a>,
+  ...a junior at <a class=fancy-underline href="https://berkeley.edu">UC Berkeley</a> studying Computer Science and Molecular Biology. This summer, I'm building
+  a MongoDB integration for <a class=fancy-underline href="https://github.com/rdkit">rdkit</a>,
   an open-source chemoinformatics platform, as part of
-  <a href="https://summerofcode.withgoogle.com/">Google Summer of Code</a>.
+  <a class=fancy-underline href="https://summerofcode.withgoogle.com/">Google Summer of Code</a>.
   I'm also helping to teach
-  <a href="https://cs61bl.org/su20/">CS61BL: Data Structures</a>.
+  <a class=fancy-underline href="https://cs61bl.org/su20/">CS61BL: Data Structures</a>.
 </p>
 <p>
   My larger aim is to improve healthcare through technology. The ongoing COVID-19 pandemic has made it abundantly clear
@@ -36,9 +36,9 @@ title: home
 </h2>
 <p>For most communication, the best way to reach me is via email at cwzou [at] berkeley.edu.</p>
 <ul>
-  <li class="spaced-list">Otherwise, my software projects are on <a href="https://github.com/chriswzou">GitHub</a>.</li>
-  <li class="spaced-list">We can always connect on <a href="https://www.linkedin.com/in/chriswzou/">LinkedIn.</a></li>
-  <li class="spaced-list">Neurotech@Berkeley's <a href="https://medium.com/@ucbneurotech">Medium</a> features some
+  <li class="spaced-list">Otherwise, my software projects are on <a class=fancy-underline href="https://github.com/chriswzou">GitHub</a>.</li>
+  <li class="spaced-list">We can always connect on <a class=fancy-underline href="https://www.linkedin.com/in/chriswzou/">LinkedIn.</a></li>
+  <li class="spaced-list">Neurotech@Berkeley's <a class=fancy-underline href="https://medium.com/@ucbneurotech">Medium</a> features some
     of my past work. It's also well worth a shoutout.</li>
 </ul>
 <!--<h2 style="margin-top: 1em; margin-bottom: 1em">
