Add in Google Summer of Code 2020 blog post

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@ title: home
 <p>
   ...a junior at <a class=fancy-underline href="https://berkeley.edu">UC Berkeley</a> studying Computer Science and Molecular Biology. This summer, I'm building
   a MongoDB integration for <a class=fancy-underline href="https://github.com/rdkit">rdkit</a>,
-  an open-source chemoinformatics platform, as part of
+  an open-source cheminformatics platform, as part of
   <a class=fancy-underline href="https://summerofcode.withgoogle.com/">Google Summer of Code</a>.
   I'm also helping to teach
   <a class=fancy-underline href="https://cs61bl.org/su20/">CS61BL: Data Structures</a>.
 </p>
 <p>
-  My larger aim is to improve healthcare through technology. The ongoing COVID-19 pandemic has made it abundantly clear
-  that the healthcare sector is underfunded and underprepared, whether financially, logistically, or medically.
-  The pandemic has also made clear that new technology can drastically improve resource allocation and patient outcomes.
-  More generally, the tech mindset rewards reasonable risk and encourages disruption, things
-  twice needed in an overburdened, conservative market.
+  I've a pretty eclectic background, having sold an app door to door in Chicago,
+  built a technical consulting group, and worked on
+  side projects with the CMO of Logitech and CIO of the Red Cross. Recently I've been
+  investigating healthcare, focusing on what technology I can help build to improve pricing,
+  care, and resource allocation.
 </p>
 <p>
-  I'm still figuring out how where I stand in this picture, whether it's identifying investments, working in a lab, or
-  doing product development. Perhaps I'll end up doing something outside of healthcare—there's a lot of other good to do.
-  For now though, I'm learning, working, eating, sleeping, running a lot, and writing a little. You'll find some of the last on this site.
+  One thing's for sure—there's a lot of good to do, no one person
+  has all the answers, and we grow by sharing knowledge. Would love to chat with you
+  about a read, an uptake, or anything interesting at all!
 <h2 id="get-in-touch" style="margin-top: 1em; margin-bottom: 1em">
   <span style="border-bottom: 1px solid;">Let's Get in Touch!
   </span>
