--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: home
 <p>
   I've a pretty eclectic background, having sold an app door to door in Chicago,
   built a technical consulting group, and worked on
-  side projects with the CMO of Logitech and CIO of the Red Cross. Recently I've been
+  projects with the CMO of Logitech and CIO of the American Red Cross. Recently I've been
   investigating healthcare, focusing on what technology I can help build to improve pricing,
   care, and resource allocation.
 </p>
