--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: home
   My "work" is my biggest passion, but I also love spending time outdoors, cooking, and music of all kinds.
 </p>
 <p>
-  This site serves a hub for projects and teaching (when I remember to update it). For the most part, however, it's a repository for blog posts. Topics vary
+  When I remember to update it, this site serves a hub for projects and teaching. For the most part, however, it's a repository for infrequent blog posts. Topics vary
   from technical recaps to random musing. Recently, I've been doing a lot of thinking about religion.
 </p>
 <h2 id="get-in-touch" style="margin-top: 1em; margin-bottom: 1em">
@@ -32,5 +32,5 @@ title: home
   <li class="spaced-list">Otherwise, my software projects are on <a class=fancy-underline href="https://github.com/chriswzou">GitHub</a>.</li>
   <li class="spaced-list">We can always connect on <a class=fancy-underline href="https://www.linkedin.com/in/chriswzou/">LinkedIn.</a></li>
   <li class="spaced-list">Neurotech@Berkeley's <a class=fancy-underline href="https://medium.com/@ucbneurotech">Medium</a> and Phoenix Consulting Group's <a class=fancy-underline href="https://medium.com/@phoenixconsulting">Medium</a>
-    both feature topical pieces I've written or edited.</li>
+    both feature topical pieces I've written or edited. Also check out <a class=fancy-underline href="https://neurotech.berkeley.edu/mind.html">MIND</a>, an interdisciplinary journal I founded on psychology, neuroscience, and neurotechnology!</li>
 </ul>
