--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: home
   ...a junior at UC Berkeley studying Computer Science and Biochemistry. I spend my time thinking about and working on improving society with tech.
   Next summer, I'll be at Datavant, a startup that aims to de-silo healthcare data.
 </p>
-<p>In the past, I've worked on cheminformatics software, taught CS classes, sold a sustainability app door to door in Chicago and built a technical consulting group. 
+<p>In the past, I've designed cheminformatics software, taught a CS class, sold a sustainability app door to door in Chicago and built a technical consulting group. 
   My "work" is my biggest passion, but I also love spending time outdoors, cooking, and music of all kinds.
 </p>
 <p>
